--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
   <link rel="stylesheet" href="style.css" />
   <script src="myscripts.js" defer></script>
+  <title>Typing Speed Test</title>
 
 <body>
     <div class="p-4 Bgcontainer container">
